clients/include/rocblas_fortran.hpp

rocblas_status rocblas_zdscal_strided_batched_fortran(rocblas_handle          handle,
                                                      int                     n,
                                                      const double*           alpha,
                                                      rocblas_double_complex* x,
                                                      int                     incx,
                                                      rocblas_stride          stride_x,
                                                      int                     batch_count);
// copy
rocblas_status rocblas_scopy_fortran(rocblas_handle handle,
                                     rocblas_int    n,
                                     const float*   x,
                                     rocblas_int    incx,
                                     float*         y,
                                     rocblas_int    incy);
rocblas_status rocblas_dcopy_fortran(rocblas_handle handle,
                                     rocblas_int    n,
                                     const double*  x,
                                     rocblas_int    incx,
                                     double*        y,
                                     rocblas_int    incy);
rocblas_status rocblas_ccopy_fortran(rocblas_handle               handle,
                                     rocblas_int                  n,
                                     const rocblas_float_complex* x,
                                     rocblas_int                  incx,
                                     rocblas_float_complex*       y,
                                     rocblas_int                  incy);
rocblas_status rocblas_zcopy_fortran(rocblas_handle                handle,
                                     rocblas_int                   n,
                                     const rocblas_double_complex* x,
                                     rocblas_int                   incx,
                                     rocblas_double_complex*       y,
                                     rocblas_int                   incy);
// copy_batched
rocblas_status rocblas_scopy_batched_fortran(rocblas_handle     handle,
                                             rocblas_int        n,
                                             const float* const x[],
                                             rocblas_int        incx,
                                             float* const       y[],
                                             rocblas_int        incy,
                                             rocblas_int        batch_count);
rocblas_status rocblas_dcopy_batched_fortran(rocblas_handle      handle,
                                             rocblas_int         n,
                                             const double* const x[],
                                             rocblas_int         incx,
                                             double* const       y[],
                                             rocblas_int         incy,
                                             rocblas_int         batch_count);
rocblas_status rocblas_ccopy_batched_fortran(rocblas_handle                     handle,
                                             rocblas_int                        n,
                                             const rocblas_float_complex* const x[],
                                             rocblas_int                        incx,
                                             rocblas_float_complex* const       y[],
                                             rocblas_int                        incy,
                                             rocblas_int                        batch_count);
rocblas_status rocblas_zcopy_batched_fortran(rocblas_handle                      handle,
                                             rocblas_int                         n,
                                             const rocblas_double_complex* const x[],
                                             rocblas_int                         incx,
                                             rocblas_double_complex* const       y[],
                                             rocblas_int                         incy,
                                             rocblas_int                         batch_count);
// copy_strided_batched
rocblas_status rocblas_scopy_strided_batched_fortran(rocblas_handle handle,
                                                     rocblas_int    n,
                                                     const float*   x,
                                                     rocblas_int    incx,
                                                     rocblas_stride stridex,
                                                     float*         y,
                                                     rocblas_int    incy,
                                                     rocblas_stride stridey,
                                                     rocblas_int    batch_count);
rocblas_status rocblas_dcopy_strided_batched_fortran(rocblas_handle handle,
                                                     rocblas_int    n,
                                                     const double*  x,
                                                     rocblas_int    incx,
                                                     rocblas_stride stridex,
                                                     double*        y,
                                                     rocblas_int    incy,
                                                     rocblas_stride stridey,
                                                     rocblas_int    batch_count);
rocblas_status rocblas_ccopy_strided_batched_fortran(rocblas_handle               handle,
                                                     rocblas_int                  n,
                                                     const rocblas_float_complex* x,
                                                     rocblas_int                  incx,
                                                     rocblas_stride               stridex,
                                                     rocblas_float_complex*       y,
                                                     rocblas_int                  incy,
                                                     rocblas_stride               stridey,
                                                     rocblas_int                  batch_count);
rocblas_status rocblas_zcopy_strided_batched_fortran(rocblas_handle                handle,
                                                     rocblas_int                   n,
                                                     const rocblas_double_complex* x,
                                                     rocblas_int                   incx,
                                                     rocblas_stride                stridex,
                                                     rocblas_double_complex*       y,
                                                     rocblas_int                   incy,
                                                     rocblas_stride                stridey,
                                                     rocblas_int                   batch_count);
// dot
rocblas_status rocblas_sdot_fortran(rocblas_handle handle,
                                    rocblas_int    n,
                                    const float*   x,
                                    rocblas_int    incx,
                                    const float*   y,
                                    rocblas_int    incy,
                                    float*         result);
rocblas_status rocblas_ddot_fortran(rocblas_handle handle,
                                    rocblas_int    n,
                                    const double*  x,
                                    rocblas_int    incx,
                                    const double*  y,
                                    rocblas_int    incy,
                                    double*        result);
rocblas_status rocblas_hdot_fortran(rocblas_handle      handle,
                                    rocblas_int         n,
                                    const rocblas_half* x,
                                    rocblas_int         incx,
                                    const rocblas_half* y,
                                    rocblas_int         incy,
                                    rocblas_half*       result);
rocblas_status rocblas_bfdot_fortran(rocblas_handle          handle,
                                     rocblas_int             n,
                                     const rocblas_bfloat16* x,
                                     rocblas_int             incx,
                                     const rocblas_bfloat16* y,
                                     rocblas_int             incy,
                                     rocblas_bfloat16*       result);
rocblas_status rocblas_cdotu_fortran(rocblas_handle               handle,
                                     rocblas_int                  n,
                                     const rocblas_float_complex* x,
                                     rocblas_int                  incx,
                                     const rocblas_float_complex* y,
                                     rocblas_int                  incy,
                                     rocblas_float_complex*       result);